# serializer version: 1
# name: test_create_or_update_table_add_columns
  dict({
    'DATA_TYPE': dict({
    }),
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_create_or_update_table_add_columns.1
  dict({
    'DATA_TYPE': dict({
    }),
    'GPS_LATITUDE': dict({
    }),
    'GPS_LONGITUDE': dict({
    }),
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_create_or_update_table_new_table
  dict({
    'DATA_TYPE': dict({
    }),
    'GPS_LATITUDE': dict({
    }),
    'GPS_LONGITUDE': dict({
    }),
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_create_or_update_table_nullable_columns
  dict({
    'DATA_TYPE': dict({
    }),
    'EXTRA_COLUMN': dict({
    }),
    'GPS_LATITUDE': dict({
    }),
    'GPS_LONGITUDE': dict({
    }),
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_create_or_update_table_nullable_columns.1
  dict({
    'DATA_TYPE': dict({
    }),
    'EXTRA_COLUMN': dict({
    }),
    'GPS_LATITUDE': dict({
    }),
    'GPS_LONGITUDE': dict({
    }),
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_upsert_dataframe_to_sqlite_empty
  dict({
    'UUID_STRING': dict({
    }),
  })
# ---
# name: test_upsert_dataframe_to_sqlite_new_table
  dict({
    'DATA_TYPE': dict({
      0: 'GPX_TRACKPOINT',
      1: 'GPX_WAYPOINT',
    }),
    'GPS_LATITUDE': dict({
      0: 37.7749,
      1: 37.775,
    }),
    'GPS_LONGITUDE': dict({
      0: -122.4194,
      1: -122.4195,
    }),
    'UUID_STRING': dict({
      0: 'test-uuid-1',
      1: 'test-uuid-2',
    }),
  })
# ---
# name: test_upsert_dataframe_to_sqlite_update_existing
  list([
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 1.1,
      'GPS_LONGITUDE': -10.1,
      'UUID_STRING': 'test-uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 2.2,
      'GPS_LONGITUDE': -20.2,
      'UUID_STRING': 'test-uuid-2',
    }),
  ])
# ---
# name: test_upsert_dataframe_to_sqlite_update_existing.1
  list([
    dict({
      'DATA_TYPE': 'GPX_WAYPOINT',
      'GPS_LATITUDE': 2.2,
      'GPS_LONGITUDE': -20.2,
      'UUID_STRING': 'test-uuid-2',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 1.2,
      'GPS_LONGITUDE': -10.2,
      'UUID_STRING': 'test-uuid-1',
    }),
    dict({
      'DATA_TYPE': 'GPX_TRACKPOINT',
      'GPS_LATITUDE': 3.3,
      'GPS_LONGITUDE': -30.3,
      'UUID_STRING': 'test-uuid-3',
    }),
  ])
# ---
